samples/_failures_safe/1761346472_bc77eb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3f22c4e0.c: In function ‘main’:
./samples/SAFE/__tmp_3f22c4e0.c:154:5: error: expected expression at end of input
  154 |     for (size_t i = 0;
      |     ^~~
./samples/SAFE/__tmp_3f22c4e0.c:154:5: error: expected declaration or statement at end of input
